--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
       <section class="about">
         <div class="container">
-          <h2 hidden class="about-title list-title">Main list</h2>
+          <h2 class="about-title visually-hidden">Main list</h2>
           <ul class="about-list">
             <li class="about-item">
               <h3 class="about-subtitle list-subtitle">Strategy</h3>
@@ -110,8 +110,10 @@
                 height="260"
                 alt="Product Designer"
               />
-              <h3 class="team-item-person list-subtitle">Mark Guerrero</h3>
-              <p class="team-item-profession list-text">Product Designer</p>
+              <div class="team-describe">
+                <h3 class="team-item-person list-subtitle">Mark Guerrero</h3>
+                <p class="team-item-profession list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -121,8 +123,10 @@
                 height="260"
                 alt="Frontend Developer"
               />
-              <h3 class="team-item-person list-subtitle">Tom Ford</h3>
-              <p class="team-item-profession list-text">Frontend Developer</p>
+              <div class="team-describe">
+                <h3 class="team-item-person list-subtitle">Tom Ford</h3>
+                <p class="team-item-profession list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -132,8 +136,10 @@
                 height="260"
                 alt="Marketing"
               />
-              <h3 class="team-item-person list-subtitle">Camila Garcia</h3>
-              <p class="team-item-profession list-text">Marketing</p>
+              <div class="team-describe">
+                <h3 class="team-item-person list-subtitle">Camila Garcia</h3>
+                <p class="team-item-profession list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -143,8 +149,10 @@
                 height="260"
                 alt="UI Designer"
               />
-              <h3 class="team-item-person list-subtitle">Daniel Wilson</h3>
-              <p class="team-item-profession list-text">UI Designer</p>
+              <div class="team-describe">
+                <h3 class="team-item-person list-subtitle">Daniel Wilson</h3>
+                <p class="team-item-profession list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
