--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
       <section class="about">
         <div class="container">
-          <h2 class="about-title visually-hidden">Main list</h2>
+          <h2 class="visually-hidden">Main list</h2>
           <ul class="about-list">
             <li class="about-item">
               <h3 class="about-subtitle list-subtitle">Strategy</h3>
